--- a/views/Editar/EditarTarjetasCredito.ejs
+++ b/views/Editar/EditarTarjetasCredito.ejs
@@ -11,28 +11,66 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-light navbar-expand-md navigation-clean" style="padding-bottom: 31px;color: rgb(51, 51, 51);background: rgb(111,158,255);">
-        <div class="container"><a class="navbar-brand" href="#" style="font-size: 27px;">El crustáceo cascarudo</a><button data-toggle="collapse" class="navbar-toggler" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
-            <div class="collapse navbar-collapse" id="navcol-1">
-              <ul class="navbar-nav ml-auto">
-                <li class="nav-item"><a class="nav-link" href="Clientes"
-                        style="color: var(--gray-dark);">Clientes</a><a class="nav-link" href="Tarjetas"
-                        style="color: var(--gray-dark);">Tarjetas de crédito</a></li>
-                <li class="nav-item"><a class="nav-link" href="Proveedores"
-                        style="color: var(--gray-dark);">Proveedores</a><a class="nav-link" href="Direcciones"
-                        style="color: var(--gray-dark);">Direcciones</a></li>
-                <li class="nav-item"><a class="nav-link" href="Inventarios"
-                        style="color: var(--gray-dark);">Inventario</a><a class="nav-link" href="producto_inventario" style="color: var(--gray-dark);">Inventario/Producto</a></li>
-                <li class="nav-item"><a class="nav-link" href="Compras"
-                        style="color: var(--gray-dark);">Compras</a><a class="nav-link" href="compra_inventario" style="color: var(--gray-dark);">Compra/Inventario</a></li>
-                <li class="nav-item"><a class="nav-link" href="Productos" style="color: var(--gray-dark);">Productos</a><a class="nav-link" href="producto_factura" style="color: var(--gray-dark);">Producto/Factura</a>
-                </li>
-                <li class="nav-item"><a class="nav-link" href="Facturas" style="color: var(--gray-dark);">Factura</a>
-                </li>
-            </ul>
-            </div>
-        </div>
-    </nav>
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <img id="icononav" src="./assets/Images/crab.png" alt="" style="height: 64px;">
+    <a class="navbar-brand" href="#">El crustáceo cascarudo</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
+        aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNavDropdown">
+        <ul class="navbar-nav">
+            <li class="nav-item active">
+                <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="Clientes">Clientes</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="TarjetaCredito">Tarjetas de crédito</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="Proveedores">Proveedores</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="Direcciones">Direcciones</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="Factura">Facturas</a>
+            </li>
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
+                    data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    Inventarios
+                </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                    <a class="dropdown-item" href="Inventario">Inventario</a>
+                    <a class="dropdown-item" href="producto_inventario">Inventario/Producto</a>
+                </div>
+            </li>
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
+                    data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    Compras
+                </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                    <a class="dropdown-item" href="Compras">Compras</a>
+                    <a class="dropdown-item" href="compra_inventario">Compras/Inventario</a>
+                </div>
+            </li>
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
+                    data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    Productos
+                </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                    <a class="dropdown-item" href="Productos">Productos</a>
+                    <a class="dropdown-item" href="producto_factura">Producto/Factura</a>
+                </div>
+            </li>
+        </ul>
+    </div>
+</nav>
     <section class="contact-clean">
         <form method="POST" action="/tarjetas/update/<%= tarjetas[0].id_tarjeta %> ">
           <h2 class="text-center">Tarjetas de crédito</h2>
