--- a/views/Paginas/Proveedores.ejs
+++ b/views/Paginas/Proveedores.ejs
@@ -16,35 +16,64 @@
 </head>
 
 <body>
-    <div></div>
-    <nav class="navbar navbar-light navbar-expand-md navigation-clean"
-        style="padding-bottom: 31px;color: rgb(51, 51, 51);background: rgb(111,158,255);">
-        <div class="container"><a class="navbar-brand" href="#" style="font-size: 27px;">El crustáceo
-                cascarudo</a><button data-toggle="collapse" class="navbar-toggler" data-target="#navcol-1"><span
-                    class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
-            <div class="collapse navbar-collapse" id="navcol-1">
-                <ul class="navbar-nav ml-auto">
-                    <li class="nav-item"><a class="nav-link" href="Clientes"
-                            style="color: var(--gray-dark);">Clientes</a><a class="nav-link" href="Tarjetas"
-                            style="color: var(--gray-dark);">Tarjetas de crédito</a></li>
-                    <li class="nav-item"><a class="nav-link" href="Proveedores"
-                            style="color: var(--gray-dark);">Proveedores</a><a class="nav-link" href="Direcciones"
-                            style="color: var(--gray-dark);">Direcciones</a></li>
-                    <li class="nav-item"><a class="nav-link" href="Inventarios"
-                            style="color: var(--gray-dark);">Inventario</a><a class="nav-link"
-                            href="producto_inventario" style="color: var(--gray-dark);">Inventario/Producto</a></li>
-                    <li class="nav-item"><a class="nav-link" href="Compras"
-                            style="color: var(--gray-dark);">Compras</a><a class="nav-link" href="compra_inventario"
-                            style="color: var(--gray-dark);">Compra/Inventario</a></li>
-                    <li class="nav-item"><a class="nav-link" href="Productos"
-                            style="color: var(--gray-dark);">Productos</a><a class="nav-link" href="producto_factura"
-                            style="color: var(--gray-dark);">Producto/Factura</a>
-                    </li>
-                    <li class="nav-item"><a class="nav-link" href="Facturas"
-                            style="color: var(--gray-dark);">Factura</a>
-                    </li>
-                </ul>
-            </div>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <img id="icononav" src="./assets/Images/crab.png" alt="" style="height: 64px;">
+        <a class="navbar-brand" href="#">El crustáceo cascarudo</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
+            aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavDropdown">
+            <ul class="navbar-nav">
+                <li class="nav-item active">
+                    <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="Clientes">Clientes</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="TarjetaCredito">Tarjetas de crédito</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="Proveedores">Proveedores</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="Direcciones">Direcciones</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="Factura">Facturas</a>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
+                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        Inventarios
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                        <a class="dropdown-item" href="Inventario">Inventario</a>
+                        <a class="dropdown-item" href="producto_inventario">Inventario/Producto</a>
+                    </div>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
+                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        Compras
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                        <a class="dropdown-item" href="Compras">Compras</a>
+                        <a class="dropdown-item" href="compra_inventario">Compras/Inventario</a>
+                    </div>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
+                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        Productos
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                        <a class="dropdown-item" href="Productos">Productos</a>
+                        <a class="dropdown-item" href="producto_factura">Producto/Factura</a>
+                    </div>
+                </li>
+            </ul>
         </div>
     </nav>
     <div style="padding: 39px;border-style: none;">
@@ -59,18 +88,15 @@
                         class="btn btn-primary d-flex align-items-center align-self-center" type="button"
                         style="height: 38px;padding-top: 6px;margin-top: 8px;background: rgb(0,24,255);border-color: rgb(0,25,255);">Agregar
                         Proveedor&nbsp;<i class="fa fa-plus-circle"></i></button></div>
-                        <div class="container-fluid col-md-3">
-                            <form class="d-flex">
-                              <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                              <button class="btn btn-outline-primary" type="submit">Search</button>
-                            </form>
-                          </div>
+                <div class="col-md-3">
+                    <button onclick="location.href='proveedores_buscar'" class="btn btn-info">Comprobar si nuestros proveedores están online</button>
+                </div>
             </div>
             <div class="row">
-                <div class="col-md-12" style="width: 1083px;">
+                <div class="col-md-12">
                     <div class="table-responsive">
                         <table class="table">
-                            <thead>
+                            <thead class="thead-light">
                                 <tr>
                                     <th>NIT</th>
                                     <th>Nombre</th>
@@ -89,7 +115,7 @@
                                     <td><%= proveedores[i].Correo %></td>
 
                                     <td><a href='/proveedores/delete/<%= proveedores[i].NIT %>'><button
-                                                class="btn btn-primary" type="button"
+                                                class="btn btn-danger" type="button"
                                                 style="width: 36.3px;height: 32px;background: rgb(255,0,24);margin-bottom: 0px;margin-right: 0px;margin-left: 0px;padding-top: 3px;padding-right: 8px;padding-left: 8px;padding-bottom: 0px;"><i
                                                     class="fas fa-window-close"
                                                     style="padding-bottom: 29px;width: 16px;height: 0px;margin-bottom: 0px;"
