--- a/views/Editar/EditarClientes.ejs
+++ b/views/Editar/EditarClientes.ejs
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="assetsEdit/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="assetsEdit/css/Contact-Form-Clean.css">
     <link rel="stylesheet" href="assetsEdit/css/styles.css">
-  </head>
+  <link rel="shortcut icon" href="./assets/Images/claw.png" type="image/x-icon"></head>
 
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
