--- a/views/Paginas/compra_inventario.ejs
+++ b/views/Paginas/compra_inventario.ejs
@@ -9,10 +9,10 @@
     <link rel="stylesheet" href="assets/fonts/fontawesome-all.min.css">
     <link rel="stylesheet" href="assets/fonts/font-awesome.min.css">
     <link rel="stylesheet" href="assets/fonts/fontawesome5-overrides.min.css">
-    <link rel="stylesheet" href="assets/css/Lista-Productos-Canito.css">
+         <link rel="stylesheet" href="assets/css/Lista-Productos-Canito.css"> 
     <link rel="stylesheet" href="assets/css/Navigation-Clean.css">
     <link rel="stylesheet" href="assets/css/styles.css">
-</head>
+<link rel="shortcut icon" href="./assets/Images/claw.png" type="image/x-icon"></head>
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -24,9 +24,7 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
             <ul class="navbar-nav">
-                <li class="nav-item active">
-                    <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-                </li>
+
                 <li class="nav-item">
                     <a class="nav-link" href="Clientes">Clientes</a>
                 </li>
@@ -114,7 +112,7 @@
                                         <td><%= data[i].Cantidad %></td>
                                         <td><%= data[i].precio_compra %></td>
     
-                                        <td><a href='/compra_inventario/delete/<%= data[i].idCompra %>/<%= data[i].idInventario %>'><button class="Inventarios" type="button"
+                                        <td><a href='/compra_inventario/delete/<%= data[i].idCompra %>/<%= data[i].idInventario %>'><button class="btn btn-danger" type="button"
                                             style="width: 36.3px;height: 32px;background: rgb(255,0,24);margin-bottom: 0px;margin-right: 0px;margin-left: 0px;padding-top: 3px;padding-right: 8px;padding-left: 8px;padding-bottom: 0px;"><i
                                                 class="fas fa-window-close"
                                                 style="padding-bottom: 29px;width: 16px;height: 0px;margin-bottom: 0px;"
