--- a/views/Paginas/producto_factura.ejs
+++ b/views/Paginas/producto_factura.ejs
@@ -9,10 +9,10 @@
     <link rel="stylesheet" href="assets/fonts/fontawesome-all.min.css">
     <link rel="stylesheet" href="assets/fonts/font-awesome.min.css">
     <link rel="stylesheet" href="assets/fonts/fontawesome5-overrides.min.css">
-    <link rel="stylesheet" href="assets/css/Lista-Productos-Canito.css">
+         <link rel="stylesheet" href="assets/css/Lista-Productos-Canito.css"> 
     <link rel="stylesheet" href="assets/css/Navigation-Clean.css">
     <link rel="stylesheet" href="assets/css/styles.css">
-</head>
+<link rel="shortcut icon" href="./assets/Images/claw.png" type="image/x-icon"></head>
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
