--- a/views/Paginas/proveedores_buscar.ejs
+++ b/views/Paginas/proveedores_buscar.ejs
@@ -9,13 +9,13 @@
     <link rel="stylesheet" href="assets/fonts/fontawesome-all.min.css">
     <link rel="stylesheet" href="assets/fonts/font-awesome.min.css">
     <link rel="stylesheet" href="assets/fonts/fontawesome5-overrides.min.css">
-    <link rel="stylesheet" href="assets/css/Lista-Productos-Canito.css">
+         <link rel="stylesheet" href="assets/css/Lista-Productos-Canito.css"> 
     <link rel="stylesheet" href="assets/css/Navigation-Clean.css">
     <link rel="stylesheet" href="assets/css/styles.css">
-    <link rel="shortcut icon" href="./Images/Logo-UFC.png" type="image/x-icon">
+    <link rel="shortcut icon" href="./assets/Images/claw.png" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
-</head>
+<link rel="shortcut icon" href="./assets/Images/claw.png" type="image/x-icon"></head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <img id="icononav" src="./assets/Images/crab.png" alt="" style="height: 64px;">
@@ -26,9 +26,7 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
             <ul class="navbar-nav">
-                <li class="nav-item active">
-                    <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-                </li>
+
                 <li class="nav-item">
                     <a class="nav-link" href="Clientes">Clientes</a>
                 </li>
@@ -84,7 +82,7 @@
             Ingresar dominio o URL  <input type="text" name="fname"><br>
             <button class="btn btn-primary" style="margin: 10PX;" type="submit">Comprobar</button>
         </form>
-        <h2 id="ex" name="ex"><%respuesta%></h2>
+        <h2 id="ex" name="ex"></h2>
     </div>
     
 
